Fix spacing

--- a/css/elements.css
+++ b/css/elements.css
@@ -3,8 +3,8 @@
     color: #fff;
     max-width: 750px;
     height: 75%;
-	margin-left: 1vw;
-	margin-right: 1vw;
+	margin-left: 2vw;
+	margin-right: 5vw;
 	margin-top: 3vh;
 	margin-bottom: 3vh;
     font-size: 14px;
